# repolayer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/view/: deps.html  graph.html  index.html
docs/superpowers/plans/: 2026-05-04-plan-a-parser-foundation.md  2026-05-04-plan-b-storage-indexer-linker.md  2026-05-04-plan-c-mcp-tools-and-polish.md
docs/superpowers/specs/: 2026-05-04-ast-outline-extension-design.md
skills/: repolayer.md
src/: file_filter.rs  lib.rs  main.rs
src/adapters/: base.rs  csharp.rs  go.rs  java.rs  kotlin.rs  markdown.rs  mod.rs  objc.rs  python.rs  rust.rs  scala.rs  swift.rs  typescript.rs
src/adapters/idl/: mod.rs  thrift.rs
src/cli/: build.rs  callers.rs  find_idl_impl.rs  init.rs  install.rs  mod.rs  prompt.rs  query.rs  repo_filter.rs  serve.rs  update.rs  view.rs  workspace.rs
src/cli/compat/: cycles.rs  deps.rs  digest.rs  find_related.rs  mod.rs  outline.rs  reverse_deps.rs  search.rs  show.rs  surface.rs
src/config/: mod.rs  schema.rs
src/core/: declaration.rs  markers.rs  mod.rs  schema.rs
src/graph/: model.rs  store.rs
src/indexer/: incremental.rs  mod.rs
src/linker/: calls.rs  idl_links.rs  imports.rs  imports_to_repo.rs  manual.rs  mod.rs
src/llm/: anthropic.rs  deepseek.rs  embedding.rs  mod.rs  summary.rs  summary_store.rs
src/mcp/: mod.rs  tools.rs  tools_compat.rs
src/outline/: mod.rs  render.rs  store.rs
src/parser/: go.rs  mod.rs  python.rs  treesitter.rs  typescript.rs
src/parser/idl/: protobuf.rs  thrift.rs
src/query/: callers.rs  dependencies.rs  find_context.rs  find_idl_impl.rs  list_repos.rs  mod.rs  symbol.rs
src/search/: bm25.rs  cache.rs  chunker.rs  download.rs  embed.rs  embedder.rs  format.rs  fusion.rs  http_embedder.rs  index.rs  mod.rs  ollama.rs  ranking.rs  store.rs  store_summary.rs  tokens.rs
src/surface/: entry.rs  entry_point.rs  fallback.rs  imports.rs  manifest.rs  mod.rs  module_graph.rs  options.rs  python.rs  render.rs  rust.rs  scala.rs  typescript.rs
tests/: adapter_csharp.rs  adapter_dispatch.rs  adapter_go.rs  adapter_java.rs  adapter_kotlin.rs  adapter_markdown.rs  adapter_objc.rs  adapter_python.rs  adapter_rust.rs  adapter_scala.rs  adapter_swift.rs  adapter_typescript.rs  calls_extraction.rs  cli_build.rs  cli_callers.rs  cli_find_idl_impl.rs  cli_query.rs  cli_update.rs  compat_cycles.rs  compat_deps.rs  compat_digest.rs  compat_find_related.rs  compat_outline.rs  compat_reverse_deps.rs  compat_search.rs  compat_show.rs  compat_surface.rs  config_http_round_trip.rs  config_loading.rs  core_declaration.rs  core_markers.rs  deps_e2e.rs  deps_extract.rs  deps_graph.rs  deps_resolver.rs  deps_store.rs  find_idl_impl.rs  graph_model.rs  graph_schema_v2.rs  graph_store.rs  (+28 more)
tests/common/: mod.rs
(+21 files in other folders)
