[package]
name = "repolayer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-repo agent index layer. Stop dumping 400k tokens — index your repos once, query like a database."
repository = "https://github.com/zhousiyao03/repolayer"
keywords = ["agent", "mcp", "code-search", "monorepo", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.40", features = ["yaml"] }
tempfile = "3.13"

[lib]
name = "repolayer"
path = "src/lib.rs"

[[bin]]
name = "repolayer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
