[package]
name = "repolayer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-repo agent index layer. Stop dumping 400k tokens — index your repos once, query like a database."
repository = "https://github.com/zhousiyao03/repolayer"
keywords = ["agent", "mcp", "code-search", "monorepo", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.8"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-md = "0.5.3"
ignore = "0.4"
regex = "1.10"
rmcp = { version = "1.6.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
dirs = "5"
async-trait = "0.1"
ast-grep-core = "0.42"
ast-grep-language = "0.42"
colored = "3"
once_cell = "1"
toml_edit = "0.22"
rayon = "1.10"
bincode = { version = "2.0", features = ["serde"] }
fs2 = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.40", features = ["yaml"] }
tempfile = "3.13"
rusqlite = { version = "0.32", features = ["bundled"] }
mockito = "1.5"

[lib]
name = "repolayer"
path = "src/lib.rs"

[[bin]]
name = "repolayer"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
